--- a/public/tool/slice.html
+++ b/public/tool/slice.html
@@ -73,10 +73,10 @@
     <h1>四宫格/九宫格</h1>
 
     <div class="section">
-        <h2>照片切分</h2>
         <div class="controls">
+            <label for="splitOption">1.上传图片</label>
             <input type="file" id="photoInput" accept="image/*">
-            <label for="splitOption">选择切分方式:</label>
+            <label for="splitOption">2.选择切分方式</label>
             <select id="splitOption">
                 <option value="4">四宫格</option>
                 <option value="9" selected>九宫格</option>
